--- a/setup.cfg
+++ b/setup.cfg
@@ -22,8 +22,10 @@ keywords = python-tesseract OCR Python
 [options]
 packages = find:
 install_requires =
-    Pillow>=8.0.0
-    packaging>=21.3
+    Pillow==7.0.0
+    packaging==21.3
+    numpy==1.21.0
+    pytesseract==0.3.8
 python_requires = >=3.9
 include_package_data = True
 
